Adding in more helper scripts.
The link database can now be managed as a single file in the _data
directory, and the linkref plugin can reach into it and pull data out
based on UID. This way, we can create a "database" of resources, and
both 1) render it out as a page from Liquid, and 2) reach into it from
the plugin for rendering links throughout the site.

Did this so as to consolidate links. Managing links in a site has always
bothered me, and this seems like a good/quick solution.

Need to start working in branches.

--- a/modules/s1/m1-1.md
+++ b/modules/s1/m1-1.md
@@ -34,14 +34,15 @@ After you identify the things you keep track of, make a second list. This second
 
 When it comes to software projects, there are two roles you're likely to see in management positions: the <b>tech lead</b> and <b>product manager</b>, or <b>PM</b>. An important part of understanding project health is going to involve understanding these people, how they work with their teams, and how well they do that. To get started, lets start with a short video or two to set some context:
 
-* [Day in the Life of a Product Manager](https://www.youtube.com/watch?v=R0ffUjavxxs)
-* [The Role of being Technical in Technical Leadership](https://www.youtube.com/watch?v=G25_RQqV4vE)
+* {% link ditlpm duration attribution %} 
+* {% link robttl duration attribution %}
 
 Then, for some depth, we'll do some reading.
 
-* <a href="https://beingfa.com/2017/10/31/so-you-want-to-be-a-product-manager/">So You Want to Be A Product Manager</a>, by Julia Austin
-* <a href="https://www.patkua.com/blog/the-definition-of-a-tech-lead/">The Definition of a Tech Lead</a>, by Pat Kua
-* <a href="https://ajahne.github.io/blog/leadership/2018/02/16/what-is-a-tech-lead.html">What is a Tech Lead?</a>, by Ajahne
+* {% link sywtbapm attribution %}
+* {% link doatl attribution %}
+* {% link wiatl attribution %}
+
 
 ## Writing: Who Are the People In Your Neighborhood? (10m)
 
